--- a/NLP_transfer_learning_text_classification.ipynb
+++ b/NLP_transfer_learning_text_classification.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "db = pymysql.connect(\"***\",\"***\",\"***\",\"***\",charset='utf8')" #I can not share the password
+    "db = pymysql.connect(\"***\",\"***\",\"***\",\"***\",charset='utf8')" 
    ]
   },
   {
